--- a/17-sampling-nway-cells.Rmd
+++ b/17-sampling-nway-cells.Rmd
@@ -6,15 +6,11 @@ UNDER CONSTRUCTION
 
 UNDER CONSTRUCTION
 
-## Previously: 
 
-```{r, echo = FALSE, out.width="80%"}
-knitr::include_graphics("ch_deeper_nway/images/nway_design_cells_design.png")
-```
+## Previous output
 
-## Output
-
-We begin by creating the output for this design in R. First we activate the required packages:
+Previously we conducted an N-way ANOVA, where juggling (yes/no) and preparation (low/medium/high) were used to predict calmness scores before an exam. The analysis we conducted is repeated below:
+ 
 
 ```{r, include=F}
 library(tidyverse)
@@ -55,7 +51,6 @@ apa.aov.table(lm_nway,
 knitr::include_graphics("ch_deeper_nway/images/nway_table_clean.png")
 ```
 
-Notice the preparation, juggling, and preparation x juggling rows on this table. In particular, the $F$-value for each of these rows. In  the remainder of the chapter we will review how these values are obtained - and their conceptual meaning.
 
 
 ```{r, echo = F}
@@ -123,17 +118,31 @@ all_res = c(rg1, rg2, rg3, rg4, rg5, rg6)
 ```
 
 
+In the last chapter we focused on the ANOVA itself. In this chapter we focus on comparing the means within cells of the ANOVA. These comparisons could be:
+
+a) planned comparisons based on hypotheses (i.e., confirmatory or a priori comparisons)
+
+or 
+
+b) exploratory comparisons to investigate an interaction.
 
 ## Confirmatory Comparisons
 
+### $t$-test
 
-### t-test
 
-If you have a comparison (with 2 means) that was planned prior to collecting data, one option to test the comparison is the t-test. This is perhaps the most frequently used approach in some research areas. Consider a scenario where you have a one-sided planned comparison (i.e., an a priori comparison) involving the cell 1 (yes juggling/low preparation) with cell 3 (yes juggling / high preparation). You could proceed as follows.
+If you have a comparison (with 2 means) that was planned prior to collecting data, one option to test the comparison is the $t$-test. This is perhaps the most frequently used approach in some research areas. 
 
-**t-test and $p$-value calculation**
+Consider a scenario where you have a directional hypothesis (i.e., you believe on cell mean is higher than an other). This is also known as a one-sided test.
 
-1) Obtain the sample data for these cells
+In this particular scenario, your planned directional comparison involves comparing cell 1 (yes juggling/low preparation) with cell 3 (yes juggling / high preparation). You believe the mean for cell 3 will be higher than cell 1. This belief is based on theory and your registered it at [osf.io](osf.io) prior to collecting data. 
+
+#### $t$-test statistic 
+
+You could proceed as follows.
+
+
+Obtain the data for these two cells:
 
 ```{r}
 juggling_high_preparation <- nway_data %>%
@@ -149,7 +158,20 @@ juggling_low_preparation <- nway_data %>%
 ```
 
 
-2) Conduct a two-sided t-test
+Conduct a two-sided $t$-test with the formula (equal variances assumed):
+
+$$
+ t = \frac{\bar{x_3} \bar{x_1}}{\sqrt{\frac{s_{people}^2}{n_1}+\frac{s_{people}^2}{n_2}}}
+$$
+ 
+Note that when we conduct a $t$-test the estimate of the population variance of calmness scores ($ s_{people}^2$) is based on only the two cells involved in the comparison (see below). Recall though that in the ANOVA this estimated was based on all six cells.
+ 
+ $$
+ s_{people}^2 = \frac{s_1^2 + s_2^2}{2}
+ $$ 
+ 
+
+Using the code below we make it a two-sided test to obtain the CI in format typically used in psychology. We convert it to a one-sided $t$-test below.
 
 ```{r}
 tout<- t.test(juggling_high_preparation, juggling_low_preparation,
@@ -160,33 +182,47 @@ print(tout)
 ```
 
 
-3) Divide the $p$-value by 2 to obain the one-sided $p$-value.
+#### $t$-test p-value
+
+Divide the two-sided $p$-value by 2 to obain the one-sided $p$-value.
 
 $0.005444/2=0.002722$
 
-4) t-test text:
+Your output text now stands as:
 
 Among jugglers, high preparation students ($M = 88.00$, $SD = 8.15$) were calmer ($M_{\text{diff}} = 16.6$, 95% $CI[6.45, 26.75]$) than low preparation students,($M = 71.4$, $SD = 5.50$), $t(8)=3.77$, $p = .003$.
 
-Noteably, we are missing a $d$-value with confidence interval for the above, see the fix below:
+Notably, we are missing an effect size, $d$-value with confidence interval, for the above.
 
-**effect size calculation**
+#### $t$-test effect size
 
-We can calculate the $d$-value with CI using:
+We can calculate the $d$-value with a CI for this comparison using the formula below.
+
+ $$
+ d = \frac{\bar{x_3} - \bar{x_1}}{s_{people}}
+ $$
+
+Not that in this formula, $s_{people}$, was based on the two cells only.
+
+To obtain this effect size in R, we use t-test value as the non-centralty parameter in this command:
 
 ```{r}
 library(MBESS)
 ci.smd(ncp = tout$statistic, n.1 = 5, n.2 = 5)
+
+# this is the came as typing:
+# ci.smd(ncp = 3.77, n.1 = 5, n.2 = 5)
 ```
 
-5) Revised t-test text
+
+#### $t$-test text
 
 Among jugglers, high preparation students ($M = 88.00$, $SD = 8.15$) were calmer ($M_{\text{diff}} = 16.6$, 95% $CI[6.45, 26.75]$, $d = 2.39$, 95% $CI[0.66, 4.04$]) than low preparation students,($M = 71.4$, $SD = 5.50$), $t(8)=3.77$, $p = .003$.
 
 
 | Approach | pooled variance | test  | effect size |
 |:--------:|:---------------:|:-----:|:-----------:|
-| t-test (equal variances assumed) | $s_{people}^2 = \frac{s_1^2 + s_2^2}{2}$ | $t = \frac{\bar{x_3} \bar{x_1}}{\sqrt{\frac{s_{people}^2}{n_1}+\frac{s_{people}^2}{n_2}}}$ | $d = \frac{\bar{x_3} - \bar{x_1}}{s_{people}}$ |
+| $t$-test (equal variances assumed) | $s_{people}^2 = \frac{s_1^2 + s_2^2}{2}$ | $t = \frac{\bar{x_3} \bar{x_1}}{\sqrt{\frac{s_{people}^2}{n_1}+\frac{s_{people}^2}{n_2}}}$ | $d = \frac{\bar{x_3} - \bar{x_1}}{s_{people}}$ |
 
 
 ### contrast (2 means)
@@ -206,7 +242,7 @@ juggling_low_preparation <- nway_data %>%
   pull(calm)
 ```
 
-**Calculate F value for contrast**
+#### contrast statistic
 
 ```{r}
 xbar3 = mean(juggling_high_preparation, na.rm = TRUE)
@@ -224,7 +260,7 @@ print(Fvalue)
 ```
 
 
-**Calculate F value for contrast**
+#### contrast p-value
 
 ```{r}
 pvalue_two_tail = pf(Fvalue,
@@ -237,7 +273,7 @@ pvalue_one_tail = pvalue_two_tail/2
 print(pvalue_one_tail)
 ```
 
-**Calculate effect size for contrast**
+#### contrast effect size
 
 ```{r}
 n_per_cell = 5
@@ -267,6 +303,7 @@ ci.sc(means = means_to_compare,
       N = mse_n)
 ```
 
+#### contrast text
 
 Among jugglers, high preparation students ($M = 88.00$, $SD = 8.15$) were calmer ($M_{\text{diff}} = 16.6$, $sc = 2.14$, 95% $CI[0.77, 3.49$]) than low preparation students,($M = 71.4$, $SD = 5.50$), $F(1, 24)= 11.482$, $p = .001$.
 
@@ -276,14 +313,14 @@ Among jugglers, high preparation students ($M = 88.00$, $SD = 8.15$) were calmer
 
 The fact that you could calculate a $d$-value in two different ways (using difference variance calculations) illustrates why it is **extremely** important that you indicate in your paper (even in a footnote) the formula you used to calculate the $d$-value and pooled variance terms.
 
-**SUMMARY**
+#### Comparison with $t$-test
 
 | Approach | pooled variance | test  | effect size |
 |:--------:|:---------------:|:-----:|:-----------:|
 | contrast (equal variances assumed) | $s_{people}^2 = \frac{s_1^2 + s_2^2 +s_3^2+s_4^2+s_5^2+s_6^2}{6}$ | $F = \frac{\frac{\sum (\bar{x_i} - \bar{\bar{x}})^2}{2-1}}{\frac{s_{people}^2}{n}} =  \left[ \frac{\bar{x_3} - \bar{x_1}}{\sqrt{\frac{s_{people}^2}{n_1}+\frac{s_{people}^2}{n_2}}} \right] ^2$ | $sc = \frac{\bar{x_3} - \bar{x_1}}{s_{people}}$ |
-| t-test (equal variances assumed) | $s_{people}^2 = \frac{s_1^2 + s_2^2}{2}$ | $t = \frac{\bar{x_3} \bar{x_1}}{\sqrt{\frac{s_{people}^2}{n_1}+\frac{s_{people}^2}{n_2}}}$ | $d = \frac{\bar{x_3} - \bar{x_1}}{s_{people}}$ |
+| $t$-test (equal variances assumed) | $s_{people}^2 = \frac{s_1^2 + s_2^2}{2}$ | $t = \frac{\bar{x_3} \bar{x_1}}{\sqrt{\frac{s_{people}^2}{n_1}+\frac{s_{people}^2}{n_2}}}$ | $d = \frac{\bar{x_3} - \bar{x_1}}{s_{people}}$ |
 
-You can see from the above table that when you are comparing two means the contrast and t-test approaches are very similar. The only difference between the two approaches is how the population variance estimate ($s_{people}^2$) is calculated.
+You can see from the above table that when you are comparing two means the contrast and $t$-test approaches are very similar. The only difference between the two approaches is how the population variance estimate ($s_{people}^2$) is calculated.
 
 
 ### contrast (multiple means)
