--- a/17-sampling-nway-cells.Rmd
+++ b/17-sampling-nway-cells.Rmd
@@ -7,7 +7,16 @@ UNDER CONSTRUCTION
 UNDER CONSTRUCTION
 
 
-## Previous output
+## Recap and next directions
+
+In the last chapter we focused on the ANOVA itself. In this chapter we focus on comparing the means of cells within the ANOVA. These comparisons could be:
+
+a) planned comparisons based on hypotheses (i.e., confirmatory or a priori comparisons)
+
+or 
+
+b) exploratory comparisons to investigate an interaction.
+
 
 Previously we conducted an N-way ANOVA, where juggling (yes/no) and preparation (low/medium/high) were used to predict calmness scores before an exam. The analysis we conducted is repeated below:
  
@@ -118,13 +127,6 @@ all_res = c(rg1, rg2, rg3, rg4, rg5, rg6)
 ```
 
 
-In the last chapter we focused on the ANOVA itself. In this chapter we focus on comparing the means within cells of the ANOVA. These comparisons could be:
-
-a) planned comparisons based on hypotheses (i.e., confirmatory or a priori comparisons)
-
-or 
-
-b) exploratory comparisons to investigate an interaction.
 
 ## Confirmatory Comparisons
 
@@ -227,7 +229,13 @@ Among jugglers, high preparation students ($M = 88.00$, $SD = 8.15$) were calmer
 
 ### contrast (2 means)
 
-Obtain the sample data for these cells
+Although the t-test is a popular approach for comparing two cell means in an ANOVA, a **contrast** is actually more consistent with the underlying ANOVA framework. The big difference between a t-test and a contrast is how the calculate the pooled variance term. In fact, that's the only difference. With a t-test the population variance of people's calmness scores is estimated using only the two cells involved in the comparison. The contrast, in contrast, takes a different approach. Even though only two means are being compared in a contrast, the  population variance of people's calmness scores is estimated using all the cells in the ANOVA.
+
+Let's walk thought the calculation process below. It initially seems more different than it is because it's an F-test. But we'll see how this is a superficial differences as we go through the process.
+
+
+
+We begin by obtaining the sample data for these cells
 
 ```{r}
 juggling_high_preparation <- nway_data %>%
@@ -244,7 +252,7 @@ juggling_low_preparation <- nway_data %>%
 
 #### contrast statistic
 
-A contrast differs from a t-test primarily because of how the pooled variance term is calculated.
+As noted, a contrast differs from a t-test primarily because of how the pooled variance term is calculated.
 
 A t-test only uses the two cells involved in the comparison to estimate $s_{people}^2$. A contrast uses a different approach. It uses all 6 cells from the ANOVA to estimate $s_{people}^2$. 
 
@@ -281,7 +289,6 @@ $$
 &= `r mean(c(xbar1, xbar3))`\\
 \end{aligned}
 $$
-
 
 
 We estimate the total variance:
@@ -405,6 +412,24 @@ The fact that you could calculate a $d$-value in two different ways (using diffe
 | $t$-test (equal variances assumed) | $s_{people}^2 = \frac{s_1^2 + s_2^2}{2}$ | $t = \frac{\bar{x_3} \bar{x_1}}{\sqrt{\frac{s_{people}^2}{n_1}+\frac{s_{people}^2}{n_2}}}$ | $d = \frac{\bar{x_3} - \bar{x_1}}{s_{people}}$ |
 
 You can see from the above table that when you are comparing two means the contrast and $t$-test approaches are very similar. The only difference between the two approaches is how the population variance estimate ($s_{people}^2$) is calculated.
+
+#### $F = t^2$
+
+In case you wanted to understand how and F-value and t-value can be the same with two groups here is the proof:
+
+$$
+\begin{align}
+F &= \frac{\frac{\sum (\bar{x_i} - \bar{\bar{x}})^2}{2-1}}{\frac{s_{people}^2}{n}}\\
+&= \frac{\frac{(\bar{x_1} - \bar{\bar{x}})^2 + (\bar{x_2} - \bar{\bar{x}})^2}{1}}{\frac{s_{people}^2}{n}}\\
+&= \frac{(\bar{x_1} - \bar{\bar{x}})^2 + (\bar{x_2} - \bar{\bar{x}})^2}{\frac{s_{people}^2}{n}}; \text{With only two means they are equidistant from the grand mean}\\
+&= \frac{\frac{(\bar{x_1} - \bar{x_2})^2}{2}}{\frac{s_{people}^2}{n}}; \text{So we can change the numerator}\\
+&= \frac{\frac{(\bar{x_1} - \bar{x_2})^2}{2}}{\frac{s_{people}^2}{n}}\times 1\\
+&= \frac{\frac{(\bar{x_1} - \bar{x_2})^2}{2}}{\frac{s_{people}^2}{n}}\times \frac{2}{2}\\
+&= \frac{(\bar{x_1} - \bar{x_2})^2}{2 \times \frac{s_{people}^2}{n}}\\
+&= \frac{(\bar{x_1} - \bar{x_2})^2}{ \frac{s_{people}^2}{n} + \frac{s_{people}^2}{n}}\\
+&= t^2
+\end{align}
+$$
 
 
 ### contrast (multiple means)
